# transformer-blueprint

./: .gitignore  pyproject.toml
gpt2/: addnorm.py  decoder_block.py  ffn.py  gpt2Model.py
transformer/: addnorm.py  attention.py  decoder.py  decoder_block.py  embedding.py  encoder.py  encoder_block.py  ffn.py  positional_encoding.py  transformer.py
