[project]
name = "transformer-blueprint"
version = "0.1.0"
description = ""
authors = [
    {name = "Ali Afkhami",email = "ali.afkhamiii@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
